# rcli

./: .gitignore  Cargo.toml  README.md  _typos.toml  cliff.toml  deny.toml
assets/: juventus.json
src/: main.rs  utils.rs
src/cli/: base64_cli.rs  csv_cli.rs  genpass_cli.rs  http_cli.rs  mod.rs  text_cli.rs
src/process/: base64_process.rs  csv_process.rs  genpass_process.rs  http_process.rs  mod.rs  text_process.rs
