[package]
name = "rcli"
version = "0.1.0"
authors = ["thne"]
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
base64 = "0.22.0"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
rand = "0.8.5"
serde = "1.0.198"
serde_json = "1.0.116"
serde_yaml = "0.9.34"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
zxcvbn = "2.2.2"
